完善README.md文件，对部分代码进行说明解释

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,14 @@
 {
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "to_shapfile",
+            "database": "shapfile",
+            "username": "postgres",
+            "password": "123"
+        }
+    ]
 }
